Fix excess bottom spacing due to `controlWidgetVisibility` preview feature

--- a/ui/appui-react/src/appui-react/preview/control-widget-visibility/NavigationWidget.scss
+++ b/ui/appui-react/src/appui-react/preview/control-widget-visibility/NavigationWidget.scss
@@ -7,7 +7,7 @@
     display: grid;
     grid-gap: 6px;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr auto;
+    grid-auto-rows: 1fr auto;
     min-height: 0;
   }
 
